@@ -1,12 +1,15 @@
 Lead Developer
 
-James Tauber - jtauber@jtauber.com
+2006-2007: James Tauber - jtauber@jtauber.com
+2008-2009: Luke Kenneth Casson Leighton <lkcl@lkcl.net>
 
 
 Other Commmitters
 
 Willie Gollino - wgollino@yahoo.com
 Dobes Vandermeer - dobesv@gmail.com
+Bernd Dorn - <bernd.dorn@lovelysystems.com>
+Luis Pamirez
 
 Other Contributors
 
@@ -14,7 +17,9 @@ Vicente J. Ruiz Jurado - vjrj@ourproject.org
 Gerard Labadie - gerard.labadie@gmail.com
 Stephan Diehl - stephan.diehl@gmx.net
 John Lehman - j1o1h1n@gmail.com
+Jürgen Kartnaller - <kartnaller@lovelysystems.com>
 
 
 And of course, a huge amount of thanks goes to Google and the engineers
 there that produced GWT, on which pyjamas is based.
+
